23/07/03 로그파일 설정 .gitignore에 log/ 추가함

--- a/tptp/src/main/resources/templates/fragments/customJs.html
+++ b/tptp/src/main/resources/templates/fragments/customJs.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="customJs">
 	
 	<!-- Template Main JS File -->
-	<script th:src="@{/assets/js/main.js}"></script>
+	<script th:src="@{/assets/js/main.js}}"></script>
 	
 	<!-- Custom JS File -->
 	
