--- a/tptp/src/main/resources/templates/fragments/config.html
+++ b/tptp/src/main/resources/templates/fragments/config.html
@@ -15,21 +15,21 @@
 <title>이곳 저곳</title>
 
 <!-- Favicons -->
-<link href="assets/img/favicon.png" rel="icon">
-<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="@{/assets/img/favicon.png" rel="icon}">
+<link href="@{/assets/img/apple-touch-icon.png}" rel="apple-touch-icon">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
 
 <!-- Vendor CSS Files -->
-<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+<link th:href="@{/assets/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+<link th:href="@{/assets/vendor/bootstrap-icons/bootstrap-icons.css}" rel="stylesheet">
+<link th:href="@{/assets/vendor/boxicons/css/boxicons.min.css}" rel="stylesheet">
+<link th:href="@{/assets/vendor/glightbox/css/glightbox.min.css}" rel="stylesheet">
+<link th:href="@{/assets/vendor/swiper/swiper-bundle.min.css}" rel="stylesheet">
 
 <!-- Template Main CSS File -->
-<link href="assets/css/style.css" rel="stylesheet">
+<link th:href="@{/assets/css/style.css}" rel="stylesheet">
 
 <!-- Vendor JS Files -->
 <script th:src="@{/assets/vendor/purecounter/purecounter_vanilla.js}"></script>
