--- a/tptp/src/main/resources/templates/fragments/customJs.html
+++ b/tptp/src/main/resources/templates/fragments/customJs.html
@@ -1,9 +1,35 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
+
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="customJs">
-	
+
 	<!-- Template Main JS File -->
 	<script th:src="@{/assets/js/main.js}"></script>
 	
 	<!-- Custom JS File -->
+	
+	<script>	
+	window.onload = function() {
+		<!-- nav 색깔 -->
+		const classNameInit = "nav-link scrollto";
+		let nav = document.getElementsByClassName(classNameInit);
+		let html = window.location.href;
+		html = html.split('/')[3];
+		if(html == "") {
+			nav[0].className += ' active';
+			nav[1].className = classNameInit;
+			nav[2].className = classNameInit;
+		}
+		else if (html == "map") {
+			nav[1].className += ' active';
+			nav[0].className = classNameInit;
+			nav[2].className = classNameInit;
+		}
+		else {
+			nav[2].className += ' active';
+			nav[0].className = classNameInit;
+			nav[1].className = classNameInit;
+		}			
+	}
+	</script>
 	
 </html>
