--- a/tptp/src/main/resources/templates/layout/defaultLayout.html
+++ b/tptp/src/main/resources/templates/layout/defaultLayout.html
@@ -2,9 +2,7 @@
 	  xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <!-- head -->	  
-<head th:replace="~{fragments/config :: config}">
-
-</head>
+<head th:replace="~{fragments/config :: config}"></head>
 <!-- body -->
 <body id="body">
 	<!-- navigation(상단메뉴) -->
