--- a/tptp/src/main/resources/static/assets/css/style.css
+++ b/tptp/src/main/resources/static/assets/css/style.css
@@ -850,7 +850,7 @@ section {
   width: 12px;
   height: 12px;
   opacity: 1;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: #ccc
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
