--- a/tptp/src/main/resources/templates/fragments/config.html
+++ b/tptp/src/main/resources/templates/fragments/config.html
@@ -15,9 +15,8 @@
 <title>이곳 저곳</title>
 
 <!-- Favicons -->
-<link href="@{/assets/img/favicon.png" rel="icon}">
-<link href="@{/assets/img/apple-touch-icon.png}" rel="apple-touch-icon">
-
+<link rel="icon" th:href="@{/assets/img/favicon.ico}">
+	
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
 
@@ -30,6 +29,7 @@
 
 <!-- Template Main CSS File -->
 <link th:href="@{/assets/css/style.css}" rel="stylesheet">
+<link th:href="@{/assets/css/mapcss.css}" rel="stylesheet">
 
 <!-- Vendor JS Files -->
 <script th:src="@{/assets/vendor/purecounter/purecounter_vanilla.js}"></script>
@@ -39,4 +39,11 @@
 <script th:src="@{/assets/vendor/swiper/swiper-bundle.min.js}"></script>
 <script th:src="@{/assets/vendor/waypoints/noframework.waypoints.js}"></script>
 <script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>
+
+<!-- Jquery JS File -->
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+
+<!-- Chart.js JS File -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
+
 </html>
