23/07/10 map.html, service 추가 service: 비즈니스 로직 작성 map.html DB에 있는 관광지를 리스트로 보여주고 마커 찍음
--- 앞으로 할일:
체크박스 클릭시 리스트와 마커 맞게 변경

--- a/tptp/src/main/resources/templates/fragments/config.html
+++ b/tptp/src/main/resources/templates/fragments/config.html
@@ -29,7 +29,7 @@
 
 <!-- Template Main CSS File -->
 <link th:href="@{/assets/css/style.css}" rel="stylesheet">
-<link th:href="@{/assets/css/mapcss.css}" rel="stylesheet">
+<link th:href="@{/assets/css/mapCss.css}" rel="stylesheet">
 
 <!-- Vendor JS Files -->
 <script th:src="@{/assets/vendor/purecounter/purecounter_vanilla.js}"></script>
