--- a/tptp/src/main/resources/templates/fragments/footer.html
+++ b/tptp/src/main/resources/templates/fragments/footer.html
@@ -18,6 +18,9 @@
       <div class="credits">
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
+      <div class="credits">
+        Icon by <a href="https://www.flaticon.com/kr/" title="즐거움 아이콘">Freepik - Flaticon</a>
+      </div>
     </div>
   </footer>
 <!-- End Footer -->
