--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -17,58 +17,276 @@
 	          </ol>
 	        </div>
 	      </div>
-	    </section><!-- End Breadcrumbs -->
-	
-		<div class="container position-relative">
-			<div id="map" style="width:70%;height:350px; margin:30px;"></div>
-			<p><em>지도를 클릭해주세요!</em></p> 
-			<p id="result"></p>
-		</div>
+	    </section>
+	    <!-- End Breadcrumbs -->
+		
+		<!-- Map -->
+			<section  id="services" class="services">
+			 <div class="container">
+				 <div class="section-title">
+		          <span>MAP</span>
+		          <h2>MAP</h2>
+		          <p>가고 싶은 관광지를 클릭하면 반경 nkm 이내의 관광지가 모두 표시됩니다!</p>
+		        </div>
+		        <div class="container icon-box" style="display: inline-grid; grid-template-columns: repeat(4, 1fr); border: 1px solid #ffb727; margin-bottom:20px;">
+		              <div class="item check"><label id="label"><input type="checkbox" id="checkNal">자연경관</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="checkNal">문화재</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="checkNal">테마공원</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="checkNal">관광지</label></div>
+		          </div>
+	          </div>
+			<div class="container d-flex justify-content-between align-items-center" style="height: 500px;">
+				<div class=" map_wrap d-flex justify-content-between align-items-center">
+				    <div id="map" style="width:100%; height:100%;"></div>
+				    <div id="menu_wrap" class="bg_white">
+		        		<ul id="placesList">
+		        			<li></li>
+		        			<li></li>
+		        			<li></li>
+		        		</ul>
+		        		<div id="pagination"></div>
+				    </div>
+				</div>
+			</div>
+		</section>
 	</main>
-	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=30c6f2e8827ad0eaab4d3083c061ca7f"></script>
-	<script>
-	var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-	    mapOption = { 
-	        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-	        level: 3 // 지도의 확대 레벨
-	    };
-	
-	var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-	
-	// 지도에 클릭 이벤트를 등록합니다
-	// 지도를 클릭하면 마지막 파라미터로 넘어온 함수를 호출합니다
-	kakao.maps.event.addListener(map, 'click', function(mouseEvent) {        
-	    
-	    // 클릭한 위도, 경도 정보를 가져옵니다 
-	    var latlng = mouseEvent.latLng;
-	    
-	    var message = '클릭한 위치의 위도는 ' + latlng.getLat() + ' 이고, ';
-	    message += '경도는 ' + latlng.getLng() + ' 입니다';
-	    
-	    var resultDiv = document.getElementById('result'); 
-	    resultDiv.innerHTML = message;
-	    
-	    var lat = latlng.getLat();
-	    var lng = latlng.getLng();
-	    console.log(lat, lng);
-	    
-	    request = $.ajax({
-            url: "/mapLatLng",
-            type: "GET",
-            dataType: "text",
-            data: {"lat" : lat, "lng" : lng}
-		});
-		//성공
-		request.done(function(data){
-			console.log("success");
+	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=30c6f2e8827ad0eaab4d3083c061ca7f&libraries=services"></script>
+	<script th:inline="javascript">
+		/*<![CDATA[*/
+			let tptpList = [[${tptpList}]];
+			console.log(tptpList[0]);
+
+			// 마커를 담을 배열입니다
+			var markers = [];
+		
+			var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+			    mapOption = {
+			        center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
+			        level: 13 // 지도의 확대 레벨
+			    };  
+		
+			// 지도를 생성합니다    
+			var map = new kakao.maps.Map(mapContainer, mapOption);
 			
-		});
-		//실패
-		request.fail(function(jqXHR, textStatus){
-				console.log('Request failed: ' + textStatus);
-		});
-	    
-	});
+			// 지도 확대 축소를 제어할 수 있는  줌 컨트롤을 생성합니다
+			var zoomControl = new kakao.maps.ZoomControl();
+			map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+		
+			
+			// 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
+			var infowindow = new kakao.maps.InfoWindow({zIndex:1});
+			
+			var places = new kakao.maps.services.Places();
+			
+			// 목록과 마커를 표출합니다
+	        displayPlaces(tptpList);
+
+	        // 페이지 번호를 표출합니다
+	        displayPagination(pagination);
+
+		
+			// 목록과 마커를 표출하는 함수입니다
+			function displayPlaces(tptpList) {
+			    var listEl = document.getElementById('placesList'), 
+			    menuEl = document.getElementById('menu_wrap'),
+			    fragment = document.createDocumentFragment(), 
+			    bounds = new kakao.maps.LatLngBounds(), 
+			    listStr = '';
+			    
+			    // 목록에 추가된 항목들을 제거합니다
+			    removeAllChildNods(listEl);
+		
+			    // 지도에 표시되고 있는 마커를 제거합니다
+			    removeMarker();
+			    
+			    for (var i=0; i<tptpList.length; i++ ) {
+			        // 마커를 생성하고 지도에 표시합니다
+			        var placePosition = new kakao.maps.LatLng(tptpList[i].lat, tptpList[i].lng),
+			            marker = addMarker(placePosition, i, tptpList[i].categoryId),
+			            itemEl = getListItem(i, tptpList[i]); // 검색 결과 항목 Element를 생성합니다
+		
+			        // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
+			        // LatLngBounds 객체에 좌표를 추가합니다
+			        bounds.extend(placePosition);
+		
+			        // 마커와 검색결과 항목에 mouseover 했을때
+			        // 해당 장소에 인포윈도우에 장소명을 표시합니다
+			        // mouseout 했을 때는 인포윈도우를 닫습니다
+			        (function(marker, title) {
+			            kakao.maps.event.addListener(marker, 'mouseover', function() {
+			                displayInfowindow(marker, title);
+			            });
+		
+			            kakao.maps.event.addListener(marker, 'mouseout', function() {
+			                infowindow.close();
+			            });
+		
+			            itemEl.onmouseover =  function () {
+			                displayInfowindow(marker, title);
+			            };
+		
+			            itemEl.onmouseout =  function () {
+			                infowindow.close();
+			            };
+			        })(marker, tptpList[i].place);
+		
+			        fragment.appendChild(itemEl);
+			    }
+		
+			    // 검색결과 항목들을 검색결과 목록 Element에 추가합니다
+			    listEl.appendChild(fragment);
+			    menuEl.scrollTop = 0;
+		
+			    // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
+			    //map.setBounds(bounds);
+			}
+		
+			// 검색결과 항목을 Element로 반환하는 함수입니다
+			function getListItem(index, tptpList) {
+		
+			    var el = document.createElement('li');
+			    var itemStr;
+			    
+			    if(tptpList.categoryId == "CT1") {
+			    	itemStr = '<span class="markerbg marker_nal"></span>' +
+	                '<div class="info">' +
+	                '   <h5>' + (index + 1) + '. ' + tptpList.place + '</h5>';
+				}
+				else if(tptpList.categoryId == "CT2") {
+					itemStr = '<span class="markerbg marker_cul"></span>' +
+	                '<div class="info">' +
+	                '   <h5>' + (index + 1) + '. ' + tptpList.place + '</h5>';
+				}
+				else if(tptpList.categoryId == "CT3") {
+					itemStr = '<span class="markerbg marker_them"></span>' +
+	                '<div class="info">' +
+	                '   <h5>' + (index + 1) + '. ' + tptpList.place + '</h5>';
+				}
+				else {
+					itemStr = '<span class="markerbg marker_tour"></span>' +
+	                '<div class="info">' +
+	                '   <h5>' + (index + 1) + '. ' + tptpList.place + '</h5>';
+				}
+			    
+                itemStr += '    <span>' + tptpList.detail + '</span>'; 
+                             
+                itemStr += '  <span class="tel">' + tptpList.category['categoryName'] + '</span>' +
+                            '</div>';
+		
+			    el.innerHTML = itemStr;
+			    el.className = 'item';
+		
+			    return el;
+			}
+		
+			// 마커를 생성하고 지도 위에 마커를 표시하는 함수입니다
+			function addMarker(position, idx, categoryId ,title) {
+				let src;
+				if(categoryId == "CT1") {
+					src = '/assets/img/natureIcon.png';
+				}
+				else if(categoryId == "CT2") {
+					src = '/assets/img/cultureIcon.png';
+				}
+				else if(categoryId == "CT3") {
+					src = '/assets/img/themeparkIcon.png';
+				}
+				else {
+					src = '/assets/img/tourIcon.png';
+				}
+			    var imageSrc = src, // 마커 이미지 url
+			        imageSize = new kakao.maps.Size(30, 30),  // 마커 이미지의 크기
+			        imgOptions =  {
+			    		offset: new kakao.maps.Point(27, 69)
+			        },
+			        markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize, imgOptions),
+			            marker = new kakao.maps.Marker({
+			            position: position, // 마커의 위치
+			            image: markerImage 
+			        });
+		
+			    marker.setMap(map); // 지도 위에 마커를 표출합니다
+			    markers.push(marker);  // 배열에 생성된 마커를 추가합니다
+		
+			    return marker;
+			}
+		
+			// 지도 위에 표시되고 있는 마커를 모두 제거합니다
+			function removeMarker() {
+			    for ( var i = 0; i < markers.length; i++ ) {
+			        markers[i].setMap(null);
+			    }   
+			    markers = [];
+			}
+		
+			// 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
+			function displayPagination(pagination) {
+			    var paginationEl = document.getElementById('pagination'),
+			        fragment = document.createDocumentFragment(),
+			        i;
+		
+			    // 기존에 추가된 페이지번호를 삭제합니다
+			    while (paginationEl.hasChildNodes()) {
+			        paginationEl.removeChild (paginationEl.lastChild);
+			    }
+		
+			    for (i=1; i<=pagination.last; i++) {
+			        var el = document.createElement('a');
+			        el.href = "#";
+			        el.innerHTML = i;
+		
+			        if (i===pagination.current) {
+			            el.className = 'on';
+			        } else {
+			            el.onclick = (function(i) {
+			                return function() {
+			                    pagination.gotoPage(i);
+			                }
+			            })(i);
+			        }
+		
+			        fragment.appendChild(el);
+			    }
+			    paginationEl.appendChild(fragment);
+			}
+		
+			// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
+			// 인포윈도우에 장소명을 표시합니다
+			function displayInfowindow(marker, title) {
+			    var content = '<div style="padding:5px;z-index:1;">' + title + '</div>';
+		
+			    infowindow.setContent(content);
+			    infowindow.open(map, marker);
+			}
+		
+			 // 검색결과 목록의 자식 Element를 제거하는 함수입니다
+			function removeAllChildNods(el) {   
+			    while (el.hasChildNodes()) {
+			        el.removeChild (el.lastChild);
+			    }
+			}
+			
+			//ajax를 이용하여 카테고리 체크박스에 이벤트가 발생했을 경우 DB와 비동기로 query문을 변경하여 보내고 데이터를 바꿉니다. 
+			
+			    
+		    /* //ajax를 이용하여 사용자가 클릭한 위도 경도 정보를 controller로 보냅니다.
+		    request = $.ajax({
+		           url: "/mapLatLng",
+		           type: "GET",
+		           dataType: "text",
+		           data: {"lat" : lat, "lng" : lng}
+			});
+			//성공
+			request.done(function(data){
+				console.log("success");
+				
+			});
+			//실패
+			request.fail(function(jqXHR, textStatus){
+					console.log('Request failed: ' + textStatus);
+			}); */
+		    
+	    /*]]>*/
 	</script>
 		
 </th:block>
