23/07/11 map.html index.html * index.html\ - 차트 1 차트2 차트 3 추가
* map.html
- geolaocation api 추가 -> 초기 위도 경도 현재 위치로
- 카테고리 기능 추가 -> 체크박스 클릭시 그 부분만 보이게

* 기타
- properties에 ssl 추가

--- a/tptp/src/main/resources/templates/app/about.html
+++ b/tptp/src/main/resources/templates/app/about.html
@@ -30,7 +30,7 @@
 		
 		         <div class="swiper-slide">
 		           <div class="testimonial-item">
-		             <img th:src="@{/assets/img/testimonials/testimonials-1.jpg}" class="testimonial-img" alt="">
+		             <img th:src="@{/assets/img/whr_circle.png}" alt="우하림" style="width:20%; height: 20%;">
 		             <h3>Saul Goodman</h3>
 		             <h4>Ceo &amp; Founder</h4>
 		             <p>
@@ -43,7 +43,7 @@
 		
 		         <div class="swiper-slide">
 		           <div class="testimonial-item">
-		             <img th:src="@{/assets/img/testimonials/testimonials-2.jpg}" class="testimonial-img" alt="">
+		             <img th:src="@{/assets/img/kyj_circle.png}" alt="김예진" style="width:20%; height: 20%;">
 		             <h3>Sara Wilsson</h3>
 		             <h4>Designer</h4>
 		             <p>
