--- a/tptp/src/main/resources/templates/fragments/footer.html
+++ b/tptp/src/main/resources/templates/fragments/footer.html
@@ -4,14 +4,8 @@
 <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Laura Thomson</h3>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      <h3><a href="https://github.com/ki5818/tptp"><i class="bi bi-github"></i>     HAN SOOL</a></h3>
+      <p>Our project source is shared at the GitHub URL.</p>
       <div class="copyright">
         &copy; Copyright <strong><span>Laura</span></strong>. All Rights Reserved
       </div>
