23-07-12 충돌로 인한 commit

--- a/tptp/src/main/resources/templates/app/about.html
+++ b/tptp/src/main/resources/templates/app/about.html
@@ -6,7 +6,7 @@
 	  
 <th:block layout:fragment="customContents">
 	<!-- ======= Testimonials Section ======= -->
-	  <section id="testimonials" class="testimonials" href="#services">
+	  <section id="testimonials" class="testimonials"` href="#services">
 	    <div class="container position-relative">
 	
 	      <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
