--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -29,10 +29,10 @@
 		          <p>가고 싶은 관광지를 클릭하면 반경 nkm 이내의 관광지가 모두 표시됩니다!</p>
 		        </div>
 		        <div class="container icon-box" style="display: inline-grid; grid-template-columns: repeat(4, 1fr); border: 1px solid #ffb727; margin-bottom:20px;">
-		              <div class="item check"><label id="label"><input type="checkbox" id="CT1" checked="checked">자연경관</label></div>
-		              <div class="item check"><label id="label"><input type="checkbox" id="CT2" checked="checked">문화재</label></div>
-		              <div class="item check"><label id="label"><input type="checkbox" id="CT3" checked="checked">테마공원</label></div>
-		              <div class="item check"><label id="label"><input type="checkbox" id="CT4" checked="checked">관광지</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="CT1" name="checkbox" checked="checked">자연경관</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="CT2" name="checkbox">문화재</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="CT3" name="checkbox">테마공원</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="CT4" name="checkbox">관광지</label></div>
 		          </div>
 	          </div>
 			<div class="container d-flex justify-content-between align-items-center" style="height: 500px;" >
@@ -53,48 +53,58 @@
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=30c6f2e8827ad0eaab4d3083c061ca7f&libraries=services"></script>
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-			const tptpList = [[${tptpList}]];			
 			
-			// tptpList를 깊은복사(참조가 끊어짐)
-			let viewList = JSON.parse(JSON.stringify(tptpList));
+			// 위치를 저장하는 객체 선언
+			let geoLat, geoLng;
 			
-			// 위도 경도 초기값
-			var geoLat;
-			var geoLng;
+			var map;
+			
+			// 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
+			var infowindow = new kakao.maps.InfoWindow({zIndex:1});
 		
-			// HTML5의 geolocation으로 사용할 수 있는지 확인합니다 https 필요
-			if (navigator.geolocation) {
-			    console.log('geoloaction');
-			    
-			    // GeoLocation을 이용해서 접속 위치를 얻어옵니다
-			    navigator.geolocation.getCurrentPosition(function(position) {
-			    	geoLat = position.coords.latitude; // 위도
-			    	geoLng = position.coords.longitude; // 경도
-			      });
-			}
-			else {
-				geoLat = 37.566826;
-				geoLng = 126.9786567;
-			}
+			// 마커를 담을 배열입니다
+			var markers;
+			getGeoApi();
 			
+			var page = 1;
+
 			// geolocation api 속도 때문에 1초 기다리고 map 생성
-			setTimeout(() => createMap(), 1000);
+			setTimeout(() =>  displayMap(), 1000);
 			
-			function createMap() {
-				// 마커를 담을 배열입니다
-				var markers = [];
+			/** GeoLocation API를 통해 현재 위치를 받아오는 함수
+				@param location
+			*/
+			function getGeoApi() {
+				// HTML5의 GeoLocation으로 사용할 수 있는지 확인합니다 https 필요
+				if (navigator.geolocation) {
+				    console.log('geoloaction api를 사용할 수 있습니다.');
+				    // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+				    navigator.geolocation.getCurrentPosition(function(position) {
+				    	geoLat = position.coords.latitude; // 위도
+				    	geoLng = position.coords.longitude; // 경도
+			      });
+				}
+				else {
+					geoLat = 37.566826;
+					geoLng = 126.9786567;
+				}
+			}
 			
+			function displayMap() {
 				var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
 				    mapOption = {
-				        center: new kakao.maps.LatLng(geoLat, geoLng), // 지도의 중심좌표
-				        level: 8 // 지도의 확대 레벨
+				        center: new kakao.maps.LatLng(geoLat, geoLng), // 지도의 중심좌표(초기값: 사용자 위치)
+				        level: 5 // 지도의 확대 레벨
 				    };
 				
 				// 지도를 생성합니다    
-				var map = new kakao.maps.Map(mapContainer, mapOption);
+				map = new kakao.maps.Map(mapContainer, mapOption);
+				
+				markers = [];
+				
 				
 				// 마우스 휠로 줌 여부
-				map.setZoomable(true);
+				map.setZoomable(false);
 				
 				var geoPosition  = new kakao.maps.LatLng(geoLat, geoLng);
 
@@ -121,171 +131,193 @@
 				// 지도 확대 축소를 제어할 수 있는 줌 컨트롤을 생성합니다
 				var zoomControl = new kakao.maps.ZoomControl();
 				map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
-			
-				// 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-				var infowindow = new kakao.maps.InfoWindow({zIndex:1});
 				
-				// 목록과 마커를 표출합니다
-		        displayPlaces(viewList);
+				checkbox(page);
 				
-		        // 체크박스 이벤트 처리
-			    var checkboxes = document.querySelectorAll('input[type=checkbox]');
-			 	console.log(checkboxes);
-			    for (var checkbox of checkboxes)
-			    {
-			        checkbox.addEventListener('change', function(event) {
-			        	let checkId = this.id;
-			        	
-			            if (event.target.checked) { //checkbox에 체크
-			                
-			            	if(checkId == "CT1") {
-			            		console.log(`${checkId} is checked`);
-				            	for(let i = 0; i < tptpList.length; i++) {
-			            			if(tptpList[i]['categoryId'] == "CT1") {
-			            				viewList.splice(i, 0, tptpList[i]);
-			            			}
-				            	}
-			            	}
-			            	else if(checkId == "CT2") {
-				            	for(let i = 0; i < tptpList.length; i++) {
-			            			if(tptpList[i]['categoryId'] == "CT2") {
-			            				viewList.splice(i, 0, tptpList[i]);
-			            			}
-				            	}
-			            	}
-			            	else if(checkId == "CT3") {
-				            	for(let i = 0; i < tptpList.length; i++) {
-			            			if(tptpList[i]['categoryId'] == "CT3") {
-			            				viewList.splice(i, 0, tptpList[i]);
-			            			}
-				            	}
-			            	}
-			            	else if(checkId == "CT4") {
-				            	for(let i = 0; i < tptpList.length; i++) {
-			            			if(tptpList[i]['categoryId'] == "CT4") {
-			            				viewList.splice(i, 0, tptpList[i]);
-			            			}
-				            	}
-			            	}
-			            }
-			            else {
-			            	console.log(`${checkId} is unchecked`);
-			            	if(checkId == "CT1") {
-				            	for(let i = 0; i < viewList.length; i++) {
-			            			if(viewList[i]['categoryId'] == "CT1") { viewList.splice(i, 1); i--;}
-				            	}
-			            	}
-			            	else if(checkId == "CT2") {
-				            	for(let i = 0; i < viewList.length; i++) {
-			            			if(viewList[i]['categoryId'] == "CT2") {viewList.splice(i, 1); i--;}
-				            	}
-			            	}
-			            	else if(checkId == "CT3") {
-				            	for(let i = 0; i < viewList.length; i++) {
-			            			if(viewList[i]['categoryId'] == "CT3") {viewList.splice(i, 1); i--;}
-				            	}
-			            	}
-			            	else if(checkId == "CT4") {
-				            	for(let i = 0; i < viewList.length; i++) {
-			            			if(viewList[i]['categoryId'] == "CT4") {viewList.splice(i, 1); i--;}
-				            	}
-			            	}
-			            	
-			            }
-
-						// 목록과 마커를 표출합니다
-				        displayPlaces(viewList);
-						
-			        });
-			    }
 			
-				// 목록과 마커를 표출하는 함수입니다
-				function displayPlaces(viewList) {
-				    var listEl = document.getElementById('placesList'),
-				    menuEl = document.getElementById('menu_wrap'),
-				    fragment = document.createDocumentFragment(), 
-				    bounds = new kakao.maps.LatLngBounds(), 
-				    listStr = '';
-				    
-				    // 목록에 추가된 항목들을 제거합니다
-				    removeAllChildNods(listEl);
-			
-				    // 지도에 표시되고 있는 마커를 제거합니다
-				    removeMarker();
-				    
-				    for (var i=0; i<viewList.length; i++ ) {
-				        // 마커를 생성하고 지도에 표시합니다
-				        var placePosition = new kakao.maps.LatLng(viewList[i].lat, viewList[i].lng),
-				            marker = addMarker(placePosition, i, viewList[i].categoryId),
-				            itemEl = getListItem(i, viewList[i]); // 검색 결과 항목 Element를 생성합니다
-			
-				        // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
-				        // LatLngBounds 객체에 좌표를 추가합니다
-				        bounds.extend(placePosition);
-			
-				        // 마커와 검색결과 항목에 mouseover 했을때
-				        // 해당 장소에 인포윈도우에 장소명을 표시합니다
-				        // mouseout 했을 때는 인포윈도우를 닫습니다
-				        (function(marker, title) {
-				            kakao.maps.event.addListener(marker, 'mouseover', function() {
-				                displayInfowindow(marker, title);
-				            });
-			
-				            kakao.maps.event.addListener(marker, 'mouseout', function() {
-				                infowindow.close();
-				            });
-			
-				            itemEl.onmouseover =  function () {
-				                displayInfowindow(marker, title);
-				            };
-			
-				            itemEl.onmouseout =  function () {
-				                infowindow.close();
-				            };
-				        })(marker, viewList[i].place);
-			
-				        fragment.appendChild(itemEl);
+			}
+				function checkbox(page) {
+					/** 체크박스 이벤트 처리 */
+				    var checkboxes = document.querySelectorAll('input[type=checkbox]');
+				    for (var checkbox of checkboxes) {
+				        checkbox.addEventListener('change', function(event) {
+				        	checkbox = document.getElementsByName("checkbox");
+							//체크박스중 체크된 체크박스를 알기 위한 객체
+							var checkedList = [];
+				        	
+							checkbox.forEach((element) => {
+			        		  if (element.checked == true) {
+			        			  checkedList.push(element.id);
+			        		     }
+				        	 });
+							 if(checkedList.length === 0) {
+								console.log('리스트가 비었습니다.');
+								var listEl = document.getElementById('placesList');
+								var paginationEl = document.getElementById('pagination');
+								removeAllChildNods(listEl);
+								removeAllChildNods(paginationEl);
+								removeMarker();
+								return false;
+							}
+							// ajax를 이용하여 checkBox event를 처리합니다.
+						    var request = $.ajax({
+						           url: "/mapcheck",
+						           type: "GET",
+						           dataType: 'json',
+						           data: {checkedList, page}
+							});
+							//성공
+							request.done(function(viewList){
+								console.log("success");
+								console.log(viewList);
+								//pageinfo 
+								var pageinfo = viewList[0].pageInfo;
+								console.log(pageinfo);
+								console.log(`check page : ${page}`);
+								displayPagination(viewList, pageinfo, page);
+				   	 			displayPlaces(viewList, pageinfo, page);
+								
+							});
+							//실패
+							request.fail(function(jqXHR, textStatus, viewList){
+									console.log('Request failed: ' + textStatus);
+							});
+				        })
 				    }
-			
-				    // 검색결과 항목들을 검색결과 목록 Element에 추가합니다
-				    listEl.appendChild(fragment);
-				    menuEl.scrollTop = 0;
-			
-				    // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
-				    //map.setBounds(bounds);
 				}
-			
-				// 검색결과 항목을 Element로 반환하는 함수입니다
+			 // 검색 결과 목록과 마커를 표출하는 함수입니다
+			    function displayPlaces(viewList, pageinfo, page) {
+			        var listEl = document.getElementById('placesList'), 
+			        menuEl = document.getElementById('menu_wrap'),
+			        fragment = document.createDocumentFragment(), 
+			        bounds = new kakao.maps.LatLngBounds(), 
+			        listStr = '';
+			        
+			        // 검색 결과 목록에 추가된 항목들을 제거합니다
+			        removeAllChildNods(listEl);
+
+			        // 지도에 표시되고 있는 마커를 제거합니다
+			        removeMarker();
+			        
+			        for (var j = 0; j < pageinfo.postsPerPage; j++ ) {
+			        	var i = j + ( (page - 1) * pageinfo.postsPerPage );
+			        	
+			        	// 데이터가 비어있는 경우에는 처리하지 않고 넘어갑니다
+			            if (!viewList[i]) {
+			              continue;
+			            }
+			        	
+			        	console.log(viewList[i]);
+			        	var lat = viewList[i]['lat'],
+			        		lng = viewList[i]['lng'];
+			        	
+			            // 마커를 생성하고 지도에 표시합니다
+			            var placePosition = new kakao.maps.LatLng(lat, lng),
+			                marker = addMarker(placePosition, i, viewList[i].categoryId, viewList[i].place), 
+			                itemEl = getListItem(i, viewList[i]); // 검색 결과 항목 Element를 생성합니다
+
+			            // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
+			            // LatLngBounds 객체에 좌표를 추가합니다
+			            //bounds.extend(placePosition);
+
+			            // 마커와 검색결과 항목에 mouseover 했을때
+			            // 해당 장소에 인포윈도우에 장소명을 표시합니다
+			            // mouseout 했을 때는 인포윈도우를 닫습니다
+			            (function(marker, title) {
+			                kakao.maps.event.addListener(marker, 'mouseover', function() {
+			                    displayInfowindow(marker, title);
+			                });
+
+			                kakao.maps.event.addListener(marker, 'mouseout', function() {
+			                    infowindow.close();
+			                });
+
+			                itemEl.onmouseover =  function () {
+			                    displayInfowindow(marker, title);
+			                };
+
+			                itemEl.onmouseout =  function () {
+			                    infowindow.close();
+			                };
+			            })(marker, viewList[i].place);
+
+			            fragment.appendChild(itemEl);
+			        }
+
+			        // 검색결과 항목들을 검색결과 목록 Element에 추가합니다
+			        listEl.appendChild(fragment);
+			        menuEl.scrollTop = 0;
+
+			        // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
+			        //map.setBounds(bounds);
+			    }
+			 
+			 // 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
+			    function displayPagination(viewList, pageinfo, page) {
+			        var paginationEl = document.getElementById('pagination'),
+			            fragment = document.createDocumentFragment(),
+			            i; 
+
+			        // 기존에 추가된 페이지번호를 삭제합니다
+			        while (paginationEl.hasChildNodes()) {
+			            paginationEl.removeChild (paginationEl.lastChild);
+			        }
+			        var el = document.createElement('a');
+			        el.innerHTML = "이전";
+			        el.href = "#";
+			        fragment.appendChild(el);
+			        paginationEl.appendChild(fragment);
+			        
+			        for (i=1; i<=11; i++) {
+			            var el = document.createElement('a');
+			            el.innerHTML = i;
+			            el.href = "#";
+			            console.log("aging");
+			            console.log(viewList);
+			            
+		                el.addEventListener('click', function(){
+				        	page = this.innerText;
+				        	console.log(`page: ${page}`);
+				        	displayPlaces(viewList, pageinfo, page);
+		                });
+
+			            fragment.appendChild(el);
+			        }
+			        paginationEl.appendChild(fragment);
+			        
+			        el.innerHTML = "다음";
+			        fragment.appendChild(el);
+			        paginationEl.appendChild(fragment);
+			    }
+				 
+				// 항목을 Element로 반환하는 함수입니다
 				function getListItem(index, viewList) {
-			
 				    var el = document.createElement('li');
 				    var itemStr;
 				    
 				    if(viewList.categoryId == "CT1") {
 				    	itemStr = '<span class="markerbg marker_nal"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList.place + '</h5>';
+		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
 					}
 					else if(viewList.categoryId == "CT2") {
 						itemStr = '<span class="markerbg marker_cul"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList.place + '</h5>';
+		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
 					}
 					else if(viewList.categoryId == "CT3") {
 						itemStr = '<span class="markerbg marker_them"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList.place + '</h5>';
+		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
 					}
 					else {
 						itemStr = '<span class="markerbg marker_tour"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList.place + '</h5>';
+		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
 					}
 				    
-	                itemStr += '    <span>' + viewList.detail + '</span>'; 
-	                             
-	                itemStr += '  <span class="tel">' + viewList.category['categoryName'] + '</span>' +
-	                            '</div>';
+	                itemStr += '    <p>' + viewList.address + '</p>';         
+	                itemStr += '  <span class="tel">' + viewList.category['categoryName'] + '</span>' + '</div>';           
 			
 				    el.innerHTML = itemStr;
 				    el.className = 'item';
@@ -330,40 +362,6 @@
 				    markers = [];
 				}
 			
-/* 				// 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
-				function displayPagination(viewList) {
-					let totalP = Math.ceil(총갯수 / 1개화면에서보여줄크기) 
-					pageCount = (viewList.length / 10) + 1;
-					
-				    var paginationEl = document.getElementById('pagination'),
-				        fragment = document.createDocumentFragment(),
-				        i;
-			
-				    // 기존에 추가된 페이지번호를 삭제합니다
-				    while (paginationEl.hasChildNodes()) {
-				        paginationEl.removeChild (paginationEl.lastChild);
-				    }
-			
-				    for (i = 1; i <= places.last; i++) {
-				        var el = document.createElement('a');
-				        el.href = "#";
-				        el.innerHTML = i;
-			
-				        if (i===pagination.current) {
-				            el.className = 'on';
-				        } else {
-				            el.onclick = (function(i) {
-				                return function() {
-				                	places.gotoPage(i);
-				                }
-				            })(i);
-				        }
-			
-				        fragment.appendChild(el);
-				    }
-				    paginationEl.appendChild(fragment);
-				} */
-			
 				// 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
 				// 인포윈도우에 장소명을 표시합니다
 				function displayInfowindow(marker, title) {
@@ -379,10 +377,9 @@
 				        el.removeChild (el.lastChild);
 				    }
 				}
-			}
-			
+		
 			    
-		    /* //ajax를 이용하여 사용자가 클릭한 위도 경도 정보를 controller로 보냅니다.
+/* 		     //ajax를 이용하여 사용자가 클릭한 위도 경도 정보를 controller로 보냅니다.
 		    request = $.ajax({
 		           url: "/mapLatLng",
 		           type: "GET",
@@ -398,6 +395,8 @@
 			request.fail(function(jqXHR, textStatus){
 					console.log('Request failed: ' + textStatus);
 			}); */
+			
+			
 	    /*]]>*/
 	</script>
 		
