--- a/tptp/src/main/resources/templates/fragments/config.html
+++ b/tptp/src/main/resources/templates/fragments/config.html
@@ -44,6 +44,7 @@
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
 <!-- Chart.js JS File -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 
 </html>
